latest version from work 20180424

--- a/tmux.conf
+++ b/tmux.conf
@@ -90,10 +90,10 @@ bind PageDown copy-mode
 
 # mouse support - set to on if you want to use the mouse
 # START:mouse
-setw -g mode-mouse off
-set -g mouse-select-pane off
-set -g mouse-resize-pane off
-set -g mouse-select-window off
+#setw -g mode-mouse off
+#set -g mouse-select-pane off
+#set -g mouse-resize-pane off
+#set -g mouse-select-window off
 # END:mouse
 
 # Set the default terminal mode to 256color mode
@@ -149,7 +149,7 @@ set -g status-left "#[fg=green]#S:#[fg=yellow]#I.#[fg=cyan]#P"
 # END:statusleft
 
 #START:utf8
-set -g status-utf8 on
+#set -g status-utf8 on
 #END:utf8
 
 # Status line right side
