--- a/tmux.conf
+++ b/tmux.conf
@@ -193,3 +193,14 @@ bind Z join-pane -h -t :-
 # bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vi && tmux send-keys C-k) || tmux select-pane -U"
 # bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vi && tmux send-keys C-l) || tmux select-pane -R"
 # bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vi && tmux send-keys 'C-\\') || tmux select-pane -l"
+bind -T copy-mode-vi y          send -X copy-selection
+bind -T copy-mode-vi v          send -X begin-selection
+bind -T copy-mode-vi V          send -X rectangle-toggle
+bind -T copy-mode-vi C-v        send -X rectangle-toggle
+bind -T copy-mode-vi Space      send -X halfpage-down
+bind -T copy-mode-vi C-PageUp   send -X page-up
+bind -T copy-mode-vi C-PageDown send -X page-down
+bind -T copy-mode-vi Home       send -X back-to-indentation
+bind -T copy-mode-vi End        send -X end-of-line
+bind -T copy-mode-vi I          send -X back-to-indentation
+bind -T copy-mode-vi A          send -X end-of-line
