add vim ,, shortcut and and rename tmux name shortcut

--- a/tmux.conf
+++ b/tmux.conf
@@ -72,6 +72,9 @@ bind -r n select-window -t :+
 # bind -r / rotate-window
 # END:windowcycling
 
+# rename window name
+bind r command-prompt -I "#W" "rename-window '%1'"
+
 # Pane resizing
 # START:paneresize
 bind -r H resize-pane -L 5
