main for clojure conjure settings

--- a/tmux.conf
+++ b/tmux.conf
@@ -116,6 +116,8 @@ set -g status-fg white
 set -g status-bg black
 # END:statuscolor
 
+set -g window-size smallest
+
 # set the color of the window list
 # START:windowstatuscolor
 setw -g window-status-fg cyan
